[package]
name = "audio_share"
version = "0.1.0"
edition = "2024"

[features]
default = ["tui"]
tui = ["dep:ratatui"]
slint = ["dep:slint"]

[dependencies]
cpal = { version = "0.16", features = [] }
webrtc = "0.13"
anyhow = "1.0"

hound = "3.5"

log = "0.4"
fern = "0.7"

tokio = { version = "1.45", features = ["full"] }
futures = "0.3"

actix-web = "4"

opus = "0.3"
rubato = "0.16"
samplerate = "0.2.4"
# audiopus_sys = { version = "0.2", features = ["static"] }

serde = "1.0"
serde_json = "1.0"
base64 = "0.22"

# color-eyre = "0.6"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.29", features = ["event-stream"] }
slint = { version = "1.12", optional = true }

arboard = "3.6"
